--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+    <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.1.0.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
