criada infra inicial para listagem de imoveis: modelo, repositorio. falta iniciar testes

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
         </pluginRepository>
     </pluginRepositories>
     <dependencies>
+    	<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.1.1</version>
+			<scope>test</scope>
+		</dependency>
         <!-- General dependencies for standard applications -->
         <dependency>
             <groupId>junit</groupId>
