--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<version>6.1.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-test-mvc</artifactId>
+		  <version>1.0.0.M2</version>
+		  <scope>test</scope>
+		</dependency>
         <!-- General dependencies for standard applications -->
         <dependency>
             <groupId>junit</groupId>
