--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,17 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		  <groupId>org.springframework</groupId>
-		  <artifactId>spring-test-mvc</artifactId>
-		  <version>1.0.0.M2</version>
-		  <scope>test</scope>
+	        <groupId>org.seleniumhq.selenium</groupId>
+	        <artifactId>selenium-java</artifactId>
+	        <version>2.28.0</version>
+	    </dependency>
+	    <dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+			<scope>test</scope>
 		</dependency>
+            
         <!-- General dependencies for standard applications -->
         <dependency>
             <groupId>junit</groupId>
