--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,6 +1,6 @@
 #Updated at Thu Dec 13 11:06:47 GMT-03:00 2012
 #Thu Dec 13 11:06:47 GMT-03:00 2012
-database.driverClassName=org.h2.Driver
-database.url=jdbc\:h2\:mem\:Tenant;DB_CLOSE_DELAY\=-1
-database.username=sa
-database.password=
+database.driverClassName=org.postgresql.Driver
+database.url=jdbc:postgresql://localhost:5432/tenant
+database.username=camilo
+database.password=porto
