--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
         </pluginRepository>
     </pluginRepositories>
     <dependencies>
+    	<!-- Search Engine Dependency - Compass -->
+    	<dependency>
+		  <groupId>org.elasticsearch</groupId>
+		  <artifactId>elasticsearch</artifactId>
+		  <version>0.20.4</version>
+		</dependency>
+    	<!--  -->
     	<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
