--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,3 +15,7 @@ log4j.appender.R.MaxBackupIndex=1
 
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+
+#log4j.logger.org.elasticsearch.index=debug
+#log4j.logger.org.elasticsearch.indices=debug
+#log4j.logger.org.elasticsearch.nodes=debug
