corrigido criacao de Node e Client elasticsearch e criado TransportClient para connectar no heroku

--- a/src/main/resources/META-INF/elasticsearch.properties
+++ b/src/main/resources/META-INF/elasticsearch.properties
@@ -1,12 +1,12 @@
 #name=tenant.prod.node
-node.local=true
+#node.local=true
 #gateway.type=fs
 #gateway.fs.location=/var/tmp/index
 #index.store.type=fs
 #index.gateway.type=none
 #index.gateway.fs.location=/var/tmp/index
-#index.number_of_shards=3
-#index.number_of_replicas=1
+index.number_of_shards=1
+index.number_of_replicas=1
 #cluster.name=test.cluster
 
 #index.store.fs.memory.enabled=false
