configurado cliente Jest para ser criado pelo Spring

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,3 +19,4 @@ log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
 log4j.logger.org.elasticsearch.index=debug
 log4j.logger.org.elasticsearch.indices=debug
 log4j.logger.org.elasticsearch.nodes=debug
+log4j.logger.org.springframework=debug
