--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 	        <groupId>org.seleniumhq.selenium</groupId>
 	        <artifactId>selenium-java</artifactId>
 	        <version>2.28.0</version>
+	        <scope>test</scope>
 	    </dependency>
 	    <dependency>
 			<groupId>postgresql</groupId>
